@@ -1,6 +1,6 @@
 /* kernel.c - the C part of the kernel */
-/* Copyright (C) 1999, 2010  Free Software Foundation, Inc.  */
-/*
+/* Copyright (C) 1999, 2010  Free Software Foundation, Inc.
+ *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
